Minor fix to some spacing issues on mobile display in skills section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -472,6 +472,9 @@ video::-webkit-media-controls {
     padding-left: 0 !important;
   }
 
+  .skills-header {
+    padding-top: 0;
+  }
   
   #intro {
     margin-top: 10px;
